# claude-self-improve

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
src/claude_self_improve/: __init__.py  cli.py  init_command.py  link_command.py  register_command.py
src/claude_self_improve/templates/claude/: CLAUDE.md  settings.json
src/claude_self_improve/templates/claude/commands/: README.md  code-review.md  meta-absorb-repo.md  meta-anti-patterns.md  meta-commit.md  meta-evolve.md  meta-inner-self.md  meta-integrate.md  meta-intelligence-inject.md  meta-intelligence-review.md  meta-learn.md  meta-motivation.md  meta-propose-skill.md  meta-scope-guard.md  meta-self-audit.md  meta-situational-learn.md  new-subpackage.md  refactor.md
src/claude_self_improve/templates/claude/hooks/: motivation-tracker.sh  post-edit-tracker.sh  pre-edit-governance.sh  session-init.sh  stop-reflection-gate.sh
src/claude_self_improve/templates/claude/memory/: ANTI_PATTERN.md  MEMORY.md  absorbed-intelligence.md  children.json  cognitive-architecture.md  episodic-memory.md  procedural-memory.md  review-registry.md  skill-candidates.md  topic-index.md
tests/: test_cli.py  test_init_command.py  test_link_command.py  test_register_command.py
